syntax = "proto3";

package mixer;

option go_package = "github.com/nicjohnson145/mixer/mixerservice/protos";

import "google/api/annotations.proto";
import "metadata.proto";

enum DrinkPublicity {
  DrinkPublicity_Unspecified = 0;
  DrinkPublicity_Public = 1;
  DrinkPublicity_Private = 2;
}

message DrinkData {
  string name = 1;
  string primary_alcohol = 2;
  string preferred_glass = 3;
  repeated string ingredients = 4;
  string instructions = 5;
  string notes = 6;
  DrinkPublicity publicity = 7;
  bool under_development = 8;
  repeated string tags = 9;
  bool favorite = 10;
}

message Drink {
  int64 id = 1;
  string username = 2;
  DrinkData drink_data = 3;
}

message CreateDrinkRequest {
  DrinkData drink_data = 1;
}

message CreateDrinkResponse {
  Metadata metadata = 1;
  int64 id = 2;
}

message GetDrinkRequest {
  int64 id = 1;
}

message GetDrinkResponse {
  Metadata metadata = 1;
  Drink drink = 2;
}

message CopyDrinkResponse {
  Metadata metadata = 1;
  int64 id = 2;
}

message DeleteDrinkRequest {
  int64 id = 1;
}

message DeleteDrinkResponse {
  Metadata metadata = 1;
}

message UpdateDrinkRequest {
  int64 id = 1;
  DrinkData drink_data = 2;
}

message UpdateDrinkResponse {
  Metadata metadata = 1;
}

message ListDrinkRequest {
  string username = 1;
}

message ListDrinkResponse {
  Metadata metadata = 1;
  repeated Drink drinks = 2;
}

service DrinkService {
  rpc CreateDrink(CreateDrinkRequest) returns (CreateDrinkResponse) {
    option (google.api.http) = {
      post: "/api/v1/drink"
      body: "*"
    };
  };
  rpc ReadDrink(GetDrinkRequest) returns (GetDrinkResponse) {
    option (google.api.http) = {
      get: "/api/v1/drink/{id}"
    };
  };
  rpc UpdateDrink(UpdateDrinkRequest) returns (UpdateDrinkResponse) {
    option (google.api.http) = {
      put: "/api/v1/drink"
      body: "*"
    };
  };
  rpc DeleteDrink(DeleteDrinkRequest) returns (DeleteDrinkResponse) {
    option (google.api.http) = {
      delete: "/api/v1/drink/{id}"
    };
  };
  rpc ListDrinks(ListDrinkRequest) returns (ListDrinkResponse) {
    option (google.api.http) = {
      get: "/api/v1/drink/user/{username}"
    };
  };
}
